--- a/styles/css/service-page.css
+++ b/styles/css/service-page.css
@@ -863,100 +863,137 @@ body {
     -webkit-mask-image: linear-gradient(to top, black 50%, transparent 100%);
   }
 }
-.contacts {
-  padding: 4rem 0 8rem 0;
+.service {
+  padding: 8rem 0;
 }
-.contacts__container {
+.service__container {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 1rem;
-  position: relative;
+}
+.service__header {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.service__header-imagebox {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.service__header-image-wrapper {
+  display: block;
+  width: 25rem;
+  height: 20rem;
+  background-color: #FFFFFF;
+  padding: 0.5rem;
+  padding-bottom: 2rem;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  rotate: 3.5deg;
+}
+.service__header-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.service__titlebox {
   display: flex;
   flex-direction: column;
+  gap: 3rem;
 }
-.contacts__title {
-  font-size: clamp(3rem, 20vw, 19.2rem);
-  line-height: clamp(3rem, 20vw, 19.2rem);
+.service__title {
+  font-size: clamp(2rem, 5vw, 4rem);
+  line-height: clamp(2rem, 5vw, 4rem);
   text-transform: lowercase;
   font-weight: 750;
-  align-self: center;
-  position: sticky;
-  top: 2rem;
+  text-transform: none;
 }
-.contacts__body {
-  display: flex;
-  margin-top: 6rem;
-  mix-blend-mode: difference;
-}
-.contacts__infobox, .contacts__links {
-  display: flex;
-  flex-direction: column;
-  gap: 6rem;
-}
-.contacts__subtitle {
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  font-weight: 750;
-  width: 50%;
-}
-.contacts__schedule {
+.service__subtitle {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-weight: 550;
 }
-.contacts__schedule-item--title {
-  font-size: 0.875rem;
-  font-weight: normal;
+.service__body {
+  display: grid;
+  grid-template-columns: auto auto 40%;
+  gap: 2rem;
+  padding: 4rem 0;
+  margin-top: 4rem;
 }
-.contacts__item {
+.service__body-imagebox {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.service__body-image-wrapper {
+  display: block;
+  width: 19rem;
+  height: 25rem;
+  background-color: #FFFFFF;
+  padding: 0.5rem;
+  padding-bottom: 2rem;
+  overflow: hidden;
+  rotate: -3.5deg;
+}
+.service__body-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.service__desc-container {
+  position: relative;
+}
+.service__desc {
+  font-size: clamp(1.5rem, 5vw, 3rem);
+  line-height: clamp(1.5rem, 5vw, 3rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  position: sticky;
+  top: 4rem;
+  text-transform: none;
+  text-align: right;
+  text-wrap: nowrap;
+}
+.service__content {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 4rem;
 }
-.contacts__item-title {
+.service__list {
+  counter-reset: item-counter;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   font-size: 0.875rem;
 }
-.contacts__item-link {
-  position: relative;
-  text-wrap: nowrap;
-  font-size: 4rem;
-  line-height: 4rem;
+.service__list-item {
+  opacity: 0.6;
 }
-.contacts__item-link::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 0.09375rem;
-  width: 0;
-  background-color: #FFFFFF;
-  transition: 0.7s;
-}
-.contacts__item-link:hover::before {
-  width: 100%;
-}
-.contacts__item-qr {
-  max-width: fit-content;
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-.contacts__item-qr:hover .contacts__item-qr-image-wrapper {
+.service__list-item--title {
+  font-size: 1.125rem;
+  font-weight: 550;
+  margin-bottom: 2rem;
   opacity: 1;
 }
-.contacts__item-qr-image-wrapper {
-  position: absolute;
-  left: -40%;
-  pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  opacity: 0;
-  transition: 0.7s;
+.service__list-item--marked {
+  list-style: disc outside;
+  margin-left: 1rem;
 }
-.contacts__button {
+.service__list-item--marked-number {
+  counter-increment: item-counter;
+  position: relative;
+  padding-left: 1rem;
+}
+.service__list-item--marked-number::before {
+  content: counter(item-counter) ".";
+  position: absolute;
+  left: 0;
+}
+.service__button {
   cursor: pointer;
   position: relative;
   overflow: hidden;
@@ -970,19 +1007,19 @@ body {
   line-height: 0.75rem;
   text-transform: uppercase;
   transition-duration: 0.7s;
+  font-weight: 660;
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 17.5rem;
+  gap: 0.5rem;
 }
-.contacts__button--icon {
+.service__button--icon {
   pointer-events: none;
   width: fit-content;
   height: fit-content;
   position: absolute;
   scale: 0.7;
 }
-.contacts__button::after {
+.service__button::after {
   content: "";
   position: absolute;
   z-index: -1;
@@ -996,49 +1033,284 @@ body {
   transition-duration: 0.6s;
   animation-timing-function: ease-out;
 }
-.contacts__button:hover::after, .contacts__button:focus::after {
+.service__button:hover::after, .service__button:focus::after {
   scale: 56;
   background: #FFFFFF;
 }
-.contacts__button:hover, .contacts__button:focus {
+.service__button:hover, .service__button:focus {
   color: #020109;
   background: none;
   border-color: #FFFFFF;
 }
-.contacts__button--icon {
-  top: 0.1rem;
+.service__button--icon {
+  position: static;
+  rotate: 45deg;
+}
+
+.select {
+  cursor: pointer;
+  position: relative;
+  user-select: none;
+}
+.select__input {
+  pointer-events: none;
+}
+.select__icon {
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%) rotate(90deg);
+  transition: transform 0.3s ease;
+  pointer-events: none;
+}
+.select.open .select__icon {
+  transform: translateY(-50%) rotate(-90deg);
+}
+.select__dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  font-size: 0.875rem;
+  max-height: 0;
+  visibility: hidden;
+  pointer-events: none;
+  overflow-y: auto;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  background-color: rgba(255, 255, 255, 0.02);
+  border: rgba(214, 208, 198, 0.1) solid 0.078125rem;
+  transition-duration: 0.35s;
+}
+.select.open .select__dropdown {
+  max-height: 16rem;
+  visibility: visible;
+  pointer-events: auto;
+}
+.select__item {
+  cursor: pointer;
+  padding: 1rem 2rem;
+  border: rgba(214, 208, 198, 0) solid 0.078125rem;
+  transition: 0.35s;
+}
+.select__item:hover {
+  border: rgba(214, 208, 198, 0.2) solid 0.078125rem;
+}
+
+.connection {
+  position: relative;
+  padding: 10rem 0;
+}
+.connection__container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+.connection__title {
+  font-size: clamp(3rem, 13vw, 11.2rem);
+  line-height: clamp(3rem, 13vw, 11.2rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  text-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+}
+.connection__links {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  column-gap: 4rem;
+  row-gap: 1rem;
+}
+.connection__links-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 0.375rem;
+  overflow: hidden;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  line-height: 0.75rem;
+  font-weight: 660;
+}
+.connection__links-item::before {
+  content: attr(data-hover-text);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+  color: #020109;
+  pointer-events: none;
+  translate: 0 100%;
+  transition: 0.7s cubic-bezier(0.36, 1.5, 0.64, 1);
+}
+.connection__links-item:hover::before {
+  translate: 0 0;
+}
+.connection__form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 8rem;
+}
+.connection__inputbox {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+.connection__input {
+  cursor: text;
+  color: #FFFFFF;
+  font-size: 0.875rem;
+  padding: 1.5rem 2rem;
+  background-color: rgba(255, 255, 255, 0.02);
+  border: rgba(214, 208, 198, 0.1) solid 0.078125rem;
+  width: 100%;
+  height: 4rem;
+  transition-duration: 0.7s;
+}
+.connection__input:hover {
+  border-color: rgba(214, 208, 198, 0.5);
+}
+.connection__input:focus {
+  border-color: #d6d0c6;
+  outline: none;
+}
+.connection__input--custom {
+  resize: none;
+  height: 8rem;
+}
+.connection__input-wrapper--custom {
+  grid-column: span 3;
+}
+.connection__footnote {
+  font-size: 0.75rem;
+  line-height: 0.75rem;
+  opacity: 0.25;
+}
+.connection__footnote-link {
+  text-decoration: underline;
+}
+.connection__button {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  display: block;
+  z-index: 0;
+  padding: 0.875rem 1.5rem;
+  border: 0.078125rem solid #FFFFFF;
+  background: none;
+  color: inherit;
+  font-size: 0.75rem;
+  line-height: 0.75rem;
+  text-transform: uppercase;
+  transition-duration: 0.7s;
+  width: 100%;
+  font-weight: 660;
+  padding: 1.5rem 3rem;
+}
+.connection__button--icon {
+  pointer-events: none;
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  scale: 0.7;
+}
+.connection__button::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0%;
+  right: 0%;
+  width: 1rem;
+  height: 1rem;
+  scale: 0;
+  border-radius: 50%;
+  background: #FFFFFF;
+  transition-duration: 0.6s;
+  animation-timing-function: ease-out;
+}
+.connection__button:hover::after, .connection__button:focus::after {
+  scale: 56;
+  background: #FFFFFF;
+}
+.connection__button:hover, .connection__button:focus {
+  color: #020109;
+  background: none;
+  border-color: #FFFFFF;
+}
+.connection__button--icon {
   right: 0.1rem;
+  top: 0.1rem;
+}
+.connection__button:hover::after, .connection__button:focus::after {
+  scale: 180;
+}
+.connection__fog {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow-x: clip;
+  pointer-events: none;
+}
+.connection__fog-layer {
+  position: absolute;
+}
+.connection__fog-layer--1, .connection__fog-layer--2 {
+  width: 80%;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  background: radial-gradient(rgba(6, 129, 206, 0.7) 0%, #00276d 100%);
+  filter: blur(60px);
+  opacity: 0.3;
+  transform: translateZ(0);
+  will-change: transform;
+}
+.connection__fog-layer--1 {
+  height: 90%;
+  left: 30%;
+  top: 0%;
+}
+.connection__fog-layer--2 {
+  height: 70%;
+  left: 5%;
+  top: 10%;
 }
 
 @media (max-width: 1024px) {
-  .contacts__body {
-    flex-direction: column;
-    gap: 4rem;
-  }
-  .contacts__infobox {
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
-}
-@media (max-width: 768px) {
-  .contacts__subtitle {
-    width: 100%;
-  }
-  .contacts__infobox {
+  .service__header {
+    display: flex;
     flex-direction: column;
     gap: 2rem;
   }
-  .contacts__item-link {
-    font-size: 3rem;
-    line-height: 3rem;
+  .service__body {
+    display: flex;
+    flex-direction: column;
   }
-  .contacts__item-qr-image-wrapper {
+  .service__body-imagebox {
     display: none;
   }
+  .service__desc {
+    text-align: left;
+  }
 }
-@media (max-width: 560px) {
-  .contacts__item-link {
-    font-size: 2rem;
-    line-height: 2rem;
+@media (max-width: 768px) {
+  .service__subtitle {
+    font-size: 1rem;
+  }
+  .connection__inputbox {
+    display: flex;
+    flex-direction: column;
   }
 }
