--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -32,6 +32,7 @@ $color-063968: #063968;
 $color-0681CE: #0681CE;
 $color-00276D: #00276D;
 $color-020109: #020109;
+$color-D8B38B: #D8B38B;
 
 // Typography
 $base-fs: 16px;
