--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1740,7 +1740,7 @@ body {
   height: auto;
   background-color: #FFFFFF;
   padding: 0.25rem;
-  padding-bottom: none;
+  padding-bottom: 0.5rem;
   overflow: hidden;
   min-height: fit-content;
 }
@@ -1753,8 +1753,8 @@ body {
 }
 .intro__video-desc {
   pointer-events: none;
-  font-size: 0.8125rem;
-  line-height: 0.8125rem;
+  font-size: 0.9375rem;
+  line-height: 0.9375rem;
   font-weight: 550;
   color: #020109;
   display: flex;
