--- a/styles/css/about-page.css
+++ b/styles/css/about-page.css
@@ -1825,8 +1825,8 @@ body {
   font-weight: 660;
   margin-top: 2rem;
 }
-.docs__body {
-  margin-top: 4rem;
+.docs__slider-wrapper {
+  padding: 6rem 0;
 }
 .docs__slide {
   max-width: 17.5rem;
@@ -1846,7 +1846,7 @@ body {
 .docs__slide-wrapper {
   height: 100%;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 40% 40% auto;
   align-self: center;
 }
 .docs__slide-wrapper > * {
