--- a/styles/layout/about/_docs.scss
+++ b/styles/layout/about/_docs.scss
@@ -5,8 +5,8 @@
     &__title {
         @include block-title();
     }
-    &__body {
-        margin-top: 4rem;
+    &__slider-wrapper {
+        padding: 6rem 0;
     }
     &__slide {
         max-width: 17.5rem;
@@ -25,7 +25,7 @@
         &-wrapper {
             height: 100%;
             display: grid;
-            grid-template-rows: repeat(3, 1fr);
+            grid-template-rows: 40% 40% auto;
             align-self: center;
             & > * {
                 justify-self: center;
