--- a/styles/css/about-page.css
+++ b/styles/css/about-page.css
@@ -2067,6 +2067,16 @@ body {
   scale: 0.8;
 }
 
+.blobs-wrapper {
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  max-width: 100vw;
+  overflow-x: clip;
+}
+
 .connection {
   position: relative;
   padding: 8rem 0;
