--- a/styles/css/contacts-page.css
+++ b/styles/css/contacts-page.css
@@ -948,7 +948,7 @@ body {
 }
 .contacts__item-qr-image-wrapper {
   position: absolute;
-  left: -40%;
+  translate: -110% 0;
   pointer-events: none;
   display: flex;
   flex-direction: column;
