--- a/styles/css/about-page.css
+++ b/styles/css/about-page.css
@@ -880,8 +880,10 @@ body {
   cursor: pointer;
   width: fit-content;
   align-self: flex-end;
+  position: absolute;
+  top: 2.5rem;
+  right: 1.5rem;
   font-size: 1.5rem;
-  display: none;
 }
 .dropdown__container {
   max-width: 1440px;
@@ -962,7 +964,7 @@ body {
     padding-top: 1rem;
   }
   .dropdown__closeBtn {
-    display: block;
+    position: static;
   }
 }
 .select {
@@ -1826,7 +1828,7 @@ body {
   margin-top: 2rem;
 }
 .docs__slider-wrapper {
-  padding: 6rem 0;
+  padding: 4rem 0;
 }
 .docs__slide {
   max-width: 17.5rem;
@@ -1882,7 +1884,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  padding: 2rem;
+  padding: 0 2rem;
 }
 .docs__nav-icon {
   cursor: pointer;
@@ -2203,38 +2205,6 @@ body {
 }
 .connection__button:hover::after, .connection__button:focus::after {
   scale: 80;
-}
-.connection__fog {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  overflow-x: clip;
-  pointer-events: none;
-}
-.connection__fog-layer {
-  position: absolute;
-}
-.connection__fog-layer--1, .connection__fog-layer--2 {
-  width: 80%;
-  border-radius: 50%;
-  aspect-ratio: 1/1;
-  background: radial-gradient(rgba(6, 129, 206, 0.7) 0%, #00276d 100%);
-  filter: blur(60px);
-  opacity: 0.3;
-  transform: translateZ(0);
-  will-change: transform;
-}
-.connection__fog-layer--1 {
-  height: 90%;
-  left: 30%;
-  top: 0%;
-}
-.connection__fog-layer--2 {
-  height: 70%;
-  left: 5%;
-  top: 10%;
 }
 
 @media (max-width: 1190px) {
