--- a/styles/css/service-page.css
+++ b/styles/css/service-page.css
@@ -182,8 +182,10 @@ body {
   cursor: pointer;
   width: fit-content;
   align-self: flex-end;
+  position: absolute;
+  top: 2.5rem;
+  right: 1.5rem;
   font-size: 1.5rem;
-  display: none;
 }
 .dropdown__container {
   max-width: 1440px;
@@ -264,7 +266,7 @@ body {
     padding-top: 1rem;
   }
   .dropdown__closeBtn {
-    display: block;
+    position: static;
   }
 }
 .select {
@@ -1098,6 +1100,16 @@ body {
   border: rgba(214, 208, 198, 0.2) solid 0.078125rem;
 }
 
+.blobs-wrapper {
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  max-width: 100vw;
+  overflow-x: clip;
+}
+
 .connection {
   position: relative;
   padding: 10rem 0;
@@ -1254,38 +1266,6 @@ body {
 }
 .connection__button:hover::after, .connection__button:focus::after {
   scale: 180;
-}
-.connection__fog {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  overflow-x: clip;
-  pointer-events: none;
-}
-.connection__fog-layer {
-  position: absolute;
-}
-.connection__fog-layer--1, .connection__fog-layer--2 {
-  width: 80%;
-  border-radius: 50%;
-  aspect-ratio: 1/1;
-  background: radial-gradient(rgba(6, 129, 206, 0.7) 0%, #00276d 100%);
-  filter: blur(60px);
-  opacity: 0.3;
-  transform: translateZ(0);
-  will-change: transform;
-}
-.connection__fog-layer--1 {
-  height: 90%;
-  left: 30%;
-  top: 0%;
-}
-.connection__fog-layer--2 {
-  height: 70%;
-  left: 5%;
-  top: 10%;
 }
 
 @media (max-width: 1024px) {
