--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -45,6 +45,7 @@
 			flex-direction: column-reverse;
 			align-items: flex-start;
 			gap: 4rem;
+			padding-bottom: 4rem;
 		}
 		&__videobox {
 			align-self: flex-end;
