--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2829,20 +2829,21 @@ body {
   }
 }
 @media (max-width: 768px) {
-  .intro {
-    min-height: fit-content;
+  .intro__container {
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
   }
   .intro__titlebox {
     flex-direction: column;
     align-items: flex-start;
   }
   .intro__contentbox {
-    translate: 0 -25%;
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-start;
     gap: 4rem;
-    margin-bottom: 12rem;
+    margin-bottom: 8rem;
   }
   .intro__videobox {
     align-self: flex-end;
