--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -35,19 +35,24 @@
 }
 @media (max-width: 768px) {
 	.intro {
+		&__container {
+			display: flex;
+			flex-direction: column;
+			gap: 8rem;
+		}
 		//height: fit-content;
-		min-height: fit-content;
+		//min-height: fit-content;
 		&__titlebox {
 			flex-direction: column;
 			align-items: flex-start;
 		}
 		&__contentbox {
-			translate: 0 -25%;
+			//translate: 0 -25%;
 			display: flex;
 			flex-direction: column-reverse;
 			align-items: flex-start;
 			gap: 4rem;
-			margin-bottom: 12rem;
+			margin-bottom: 8rem;
 		}
 		&__videobox {
 			align-self: flex-end;
