--- a/styles/css/about-page.css
+++ b/styles/css/about-page.css
@@ -2069,19 +2069,18 @@ body {
   scale: 0.8;
 }
 
-.blobs-wrapper {
+.blobs {
   position: absolute;
   z-index: -1;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
-  max-width: 100vw;
-  overflow-x: clip;
 }
 
 .connection {
   position: relative;
   padding: 8rem 0;
+  overflow-x: clip;
 }
 .connection__container {
   max-width: 1440px;
