--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2647,19 +2647,18 @@ body {
   border: rgba(214, 208, 198, 0.2) solid 0.078125rem;
 }
 
-.blobs-wrapper {
+.blobs {
   position: absolute;
   z-index: -1;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
-  max-width: 100vw;
-  overflow-x: clip;
 }
 
 .connection {
   position: relative;
   padding: 10rem 0;
+  overflow-x: clip;
 }
 .connection__container {
   max-width: 1440px;
