--- a/styles/layout/about/_connection.scss
+++ b/styles/layout/about/_connection.scss
@@ -2,6 +2,7 @@
 .connection {
 	position: relative;
 	padding: 8rem 0;
+	overflow-x: clip;
 	&__container {
 		@include content-width();
 		@include flex-center();
