--- a/styles/css/article-page.css
+++ b/styles/css/article-page.css
@@ -1599,14 +1599,14 @@ body {
     aspect-ratio: 1.5/1;
   }
 }
-.article {
+section.article {
   position: relative;
   padding: 8rem 0;
   background-color: #FFFFFF;
   color: #020109;
   text-wrap: wrap;
 }
-.article__container {
+section.article .article__container {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 1rem;
@@ -1616,24 +1616,24 @@ body {
   grid-template-columns: auto 40%;
   gap: 4rem;
 }
-.article__sider {
+section.article aside {
   position: relative;
 }
-.article__sider-container {
+section.article aside > div {
   position: sticky;
   top: 8rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
-.article__title {
+section.article aside > div > h1 {
   font-size: clamp(2rem, 3vw, 3rem);
   line-height: clamp(2rem, 3vw, 3rem);
   text-transform: lowercase;
   font-weight: 750;
   text-transform: none;
 }
-.article__link-back {
+section.article aside > div > a {
   font-size: 0.75rem;
   font-weight: 660;
   text-transform: uppercase;
@@ -1641,62 +1641,66 @@ body {
   align-items: center;
   gap: 0.5rem;
 }
-.article__link-back--icon {
+section.article aside > div > a > i {
   pointer-events: none;
   rotate: -135deg;
 }
-.article__nav {
+section.article aside > div > nav {
   color: #D6D0C6;
   width: fit-content;
 }
-.article__nav-item {
+section.article aside > div > nav > li {
   list-style: disc inside;
   transition: 0.7s;
 }
-.article__nav-item:hover {
+section.article aside > div > nav > li:hover {
   color: #D8B38B;
 }
-.article__cover-wrapper {
+section.article aside > div > picture {
   display: flex;
   align-items: center;
   justify-content: center;
   max-width: 100%;
-  max-height: 26.25rem;
+  max-height: 24.25rem;
   overflow: hidden;
 }
-.article__cover {
+section.article aside > div > picture img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.article__body {
+section.article article {
   display: flex;
   flex-direction: column;
   gap: 4rem;
 }
-.article__desc {
+section.article article > p {
   font-size: 1.125rem;
   font-weight: 660;
 }
-.article__chapter {
+section.article article > div {
   scroll-margin: 12rem;
 }
-.article__chapter-title {
+section.article article > div > h2 {
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 550;
   margin-bottom: 2rem;
 }
-.article__chapter-text {
+section.article article > div > p {
   font-size: 0.875rem;
   opacity: 0.6;
   margin-top: 0.5rem;
 }
-.article__chapter-list-item {
+section.article article > div > ul {
+  opacity: 0.6;
+}
+section.article article > div > ul li {
   margin-left: 1rem;
   list-style: disc outside;
 }
-.article__chapter-image-wrapper, .article__chapter-video-wrapper {
+section.article article > div > picture,
+section.article article > div > div:has(video) {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1705,14 +1709,17 @@ body {
   overflow: hidden;
   margin-top: 2rem;
 }
-.article__chapter-image, .article__chapter-video {
+section.article article > div > picture img,
+section.article article > div > picture video,
+section.article article > div > div:has(video) img,
+section.article article > div > div:has(video) video {
   width: 100%;
   height: 100%;
 }
-.article__chapter-video-wrapper {
+section.article article > div > div:has(video) {
   position: relative;
 }
-.article__chapter-video-control {
+section.article article > div > div:has(video) > i {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -1724,38 +1731,44 @@ body {
   border: 0.09375rem solid #FFFFFF;
   border-radius: 50%;
 }
-.article__chapter-values {
+section.article article > div > ol {
+  margin-top: 2rem;
+  font-weight: 550;
+}
+section.article article > div > ol li {
+  list-style: none;
+}
+section.article article > div > ol li:first-child {
+  font-size: 0.8125rem;
+}
+section.article article > div > ol li:last-child {
+  font-size: 0.75rem;
+  opacity: 0.5;
+}
+section.article article > div > div.article__values {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-top: 2rem;
 }
-.article__chapter-values-item {
+section.article article > div > div.article__values > ul {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
-.article__chapter-values-number {
+section.article article > div > div.article__values > ul li {
+  list-style: none;
+}
+section.article article > div > div.article__values > ul li:first-child {
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 550;
   color: #1D719D;
 }
-.article__chapter-values-text {
+section.article article > div > div.article__values > ul li:last-child {
   font-size: 0.8125rem;
   font-weight: 550;
 }
-.article__chapter-client {
-  margin-top: 2rem;
-  font-weight: 550;
-}
-.article__chapter-client-name {
-  font-size: 0.8125rem;
-}
-.article__chapter-client-post {
-  font-size: 0.75rem;
-  opacity: 0.5;
-}
-.article__fog {
+section.article .article__fog {
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -1763,21 +1776,21 @@ body {
   overflow-x: clip;
   pointer-events: none;
 }
-.article__fog-layer {
+section.article .article__fog-layer {
   position: absolute;
 }
-.article__fog-layer--1, .article__fog-layer--2 {
+section.article .article__fog-layer--1, section.article .article__fog-layer--2 {
   border-radius: 50%;
   background: linear-gradient(to bottom, white 0%, white 40%, #0681ce 70%, #00276d 100%);
   filter: blur(25px);
 }
-.article__fog-layer--1 {
+section.article .article__fog-layer--1 {
   height: 20rem;
   width: 100%;
   left: -20%;
   bottom: -10rem;
 }
-.article__fog-layer--2 {
+section.article .article__fog-layer--2 {
   height: 10rem;
   width: 50%;
   right: -10%;
