--- a/styles/css/service-page.css
+++ b/styles/css/service-page.css
@@ -877,12 +877,31 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
-.service__header-imagebox {
+.service__header > div.service__titlebox {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.service__header > div.service__titlebox h1 {
+  font-size: clamp(2rem, 5vw, 4rem);
+  line-height: clamp(2rem, 5vw, 4rem);
+  text-transform: lowercase;
+  font-weight: 750;
+  text-transform: none;
+}
+.service__header > div.service__titlebox ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.125rem;
+  font-weight: 550;
+}
+.service__header > div:has(picture) {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-.service__header-image-wrapper {
+.service__header > div:has(picture) picture {
   display: block;
   width: 25rem;
   height: 20rem;
@@ -895,29 +914,10 @@ body {
   justify-content: center;
   rotate: 3.5deg;
 }
-.service__header-image {
+.service__header > div:has(picture) picture img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-.service__titlebox {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-.service__title {
-  font-size: clamp(2rem, 5vw, 4rem);
-  line-height: clamp(2rem, 5vw, 4rem);
-  text-transform: lowercase;
-  font-weight: 750;
-  text-transform: none;
-}
-.service__subtitle {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  font-size: 1.125rem;
-  font-weight: 550;
 }
 .service__body {
   display: grid;
@@ -926,12 +926,12 @@ body {
   padding: 4rem 0;
   margin-top: 4rem;
 }
-.service__body-imagebox {
+.service__body > aside {
   display: flex;
   align-items: flex-end;
   justify-content: center;
 }
-.service__body-image-wrapper {
+.service__body > aside > picture {
   display: block;
   width: 19rem;
   height: 25rem;
@@ -941,15 +941,15 @@ body {
   overflow: hidden;
   rotate: -3.5deg;
 }
-.service__body-image {
+.service__body > aside > picture img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.service__desc-container {
+.service__body > div:has(h2) {
   position: relative;
 }
-.service__desc {
+.service__body > div:has(h2) > h2 {
   font-size: clamp(1.5rem, 5vw, 3rem);
   line-height: clamp(1.5rem, 5vw, 3rem);
   text-transform: lowercase;
@@ -965,37 +965,48 @@ body {
   flex-direction: column;
   gap: 4rem;
 }
-.service__list {
+.service__content > ul,
+.service__content ol {
   counter-reset: item-counter;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   font-size: 0.875rem;
 }
-.service__list-item {
+.service__content > ul li,
+.service__content ol li {
   opacity: 0.6;
 }
-.service__list-item--title {
+.service__content > ul li:first-child {
   font-size: 1.125rem;
   font-weight: 550;
   margin-bottom: 2rem;
   opacity: 1;
 }
-.service__list-item--marked {
+.service__content > ul li:not(:first-child) {
   list-style: disc outside;
   margin-left: 1rem;
 }
-.service__list-item--marked-number {
+.service__content > ol li {
+  list-style: none;
+}
+.service__content > ol li:first-child {
+  font-size: 1.125rem;
+  font-weight: 550;
+  margin-bottom: 2rem;
+  opacity: 1;
+}
+.service__content > ol li:not(:first-child) {
   counter-increment: item-counter;
   position: relative;
   padding-left: 1rem;
 }
-.service__list-item--marked-number::before {
+.service__content > ol li:not(:first-child)::before {
   content: counter(item-counter) ".";
   position: absolute;
   left: 0;
 }
-.service__button {
+.service__content > button {
   cursor: pointer;
   position: relative;
   overflow: hidden;
@@ -1009,19 +1020,20 @@ body {
   line-height: 0.75rem;
   text-transform: uppercase;
   transition-duration: 0.7s;
+  width: fit-content;
   font-weight: 660;
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
-.service__button--icon {
+.service__content > button--icon {
   pointer-events: none;
   width: fit-content;
   height: fit-content;
   position: absolute;
   scale: 0.7;
 }
-.service__button::after {
+.service__content > button::after {
   content: "";
   position: absolute;
   z-index: -1;
@@ -1035,16 +1047,16 @@ body {
   transition-duration: 0.6s;
   animation-timing-function: ease-out;
 }
-.service__button:hover::after, .service__button:focus::after {
+.service__content > button:hover::after, .service__content > button:focus::after {
   scale: 56;
   background: #FFFFFF;
 }
-.service__button:hover, .service__button:focus {
+.service__content > button:hover, .service__content > button:focus {
   color: #020109;
   background: none;
   border-color: #FFFFFF;
 }
-.service__button--icon {
+.service__content > button > i {
   position: static;
   rotate: 45deg;
 }
