--- a/styles/layout/article/_article.scss
+++ b/styles/layout/article/_article.scss
@@ -1,157 +1,163 @@
 @import "../../components/modals/popup-video";
-.article {
-    position: relative;
-    padding: 8rem 0;
-    background-color: $color-FFFFFF;
-    color: $color-020109;
-    text-wrap: wrap;
-    &__container {
-        @include content-width();
-        position: relative;
-        z-index: 1;
-        display: grid;
-        grid-template-columns: auto 40%;
-        gap: 4rem;
-    }
-    &__sider {
-        position: relative;
-        &-container {
-            position: sticky;
-            top: 8rem;
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-        }
-    }
-    &__title {
-        @include fs-text(3vw, $size-48px, $size-32px);
-        text-transform: none;
-    }
-    &__link-back {
-        font-size: $size-12px;
-        font-weight: $fw-660;
-        text-transform: uppercase;
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        &--icon {
-            pointer-events: none;
-            rotate: -135deg;
-        }
-    }
-    &__nav {
-        color: $color-D6D0C6;
-        width: fit-content;
-        &-item {
-            list-style: disc inside;
-            transition: $duration;
-            &:hover {
-                color: $color-D8B38B;
-            }
-        }
-    }
-    &__cover-wrapper {
-        @include flex-center();
-        max-width: 100%;
-        max-height: 26.25rem;
-        overflow: hidden;
-    }
-    &__cover {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    &__body {
-        display: flex;
-        flex-direction: column;
-        gap: 4rem;
-    }
-    &__desc {
-        font-size: $size-18px;
-        font-weight: $fw-660;
-    }
-    &__chapter {
-        scroll-margin: 12rem;
-        &-title {
-            font-size: $size-32px;
-            line-height: $size-32px;
-            font-weight: $fw-550;
-            margin-bottom: 2rem;
-        }
-        &-text {
-            font-size: $size-14px;
-            opacity: 0.6;
-            margin-top: 0.5rem;
-        }
-        &-list {
-            &-item {
-                margin-left: 1rem;
-                list-style: disc outside;
-            }
-        }
-        &-image-wrapper,
-        &-video-wrapper {
-            @include flex-center();
-            width: 100%;
-            max-height: 20rem;
-            overflow: hidden;
-            margin-top: 2rem;
-        }
-        &-image,
-        &-video {
-            width: 100%;
-            height: 100%;
-        }
-        &-video-wrapper {
-            position: relative;
-        }
-        &-video {
-            &-control {
-                cursor: pointer;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                translate: -50% -50%;
-                color: $color-FFFFFF;
-                font-size: 2rem;
-                padding: 0.5rem 0.3rem 0.5rem 0.6rem;
-                border: $size-1-5px solid $color-FFFFFF;
-                border-radius: 50%;
-            }
-        }
-        &-values {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            margin-top: 2rem;
-            &-item {
-                display: flex;
-                flex-direction: column;
-                gap: 0.5rem;
-            }
-            &-number {
-                font-size: $size-32px;
-                line-height: $size-32px;
-                font-weight: $fw-550;
-                color: $color-1D719D;
-            }
-            &-text {
-                font-size: $size-13px;
-                font-weight: $fw-550;
-            }
-        }
-        &-client {
-            margin-top: 2rem;
-            font-weight: $fw-550;
-            &-name {
-                font-size: $size-13px;
-            }
-            &-post {
-                font-size: $size-12px;
-                opacity: 0.5;
-            }
-        }
-    }
-    &__fog {
-        @include block-fog-border();
-    }
+
+section.article {
+	position: relative;
+	padding: 8rem 0;
+	background-color: $color-FFFFFF;
+	color: $color-020109;
+	text-wrap: wrap;
+	.article__container {
+		@include content-width();
+		position: relative;
+		z-index: 1;
+		display: grid;
+		grid-template-columns: auto 40%;
+		gap: 4rem;
+	}
+	aside {
+		position: relative;
+		> div {
+			position: sticky;
+			top: 8rem;
+			display: flex;
+			flex-direction: column;
+			gap: 2rem;
+			> h1 {
+				@include fs-text(3vw, $size-48px, $size-32px);
+				text-transform: none;
+			}
+			> a {
+				font-size: $size-12px;
+				font-weight: $fw-660;
+				text-transform: uppercase;
+				display: flex;
+				align-items: center;
+				gap: 0.5rem;
+				> i {
+					pointer-events: none;
+					rotate: -135deg;
+				}
+			}
+			> nav {
+				color: $color-D6D0C6;
+				width: fit-content;
+				> li {
+					list-style: disc inside;
+					transition: $duration;
+					&:hover {
+						color: $color-D8B38B;
+					}
+				}
+			}
+			> picture {
+				@include flex-center();
+				max-width: 100%;
+				max-height: 24.25rem;
+				overflow: hidden;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+		}
+	}
+	article {
+		display: flex;
+		flex-direction: column;
+		gap: 4rem;
+		> p {
+			font-size: $size-18px;
+			font-weight: $fw-660;
+		}
+		> div {
+			scroll-margin: 12rem;
+			> h2 {
+				font-size: $size-32px;
+				line-height: $size-32px;
+				font-weight: $fw-550;
+				margin-bottom: 2rem;
+			}
+			> p {
+				font-size: $size-14px;
+				opacity: 0.6;
+				margin-top: 0.5rem;
+			}
+			> ul {
+				opacity: 0.6;
+				li {
+					margin-left: 1rem;
+					list-style: disc outside;
+				}
+			}
+			> picture,
+			> div:has(video) {
+				@include flex-center();
+				width: 100%;
+				max-height: 20rem;
+				overflow: hidden;
+				margin-top: 2rem;
+				img,
+				video {
+					width: 100%;
+					height: 100%;
+				}
+			}
+			> div:has(video) {
+				position: relative;
+				> i {
+					cursor: pointer;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					translate: -50% -50%;
+					color: $color-FFFFFF;
+					font-size: 2rem;
+					padding: 0.5rem 0.3rem 0.5rem 0.6rem;
+					border: $size-1-5px solid $color-FFFFFF;
+					border-radius: 50%;
+				}
+			}
+			> ol {
+				margin-top: 2rem;
+				font-weight: $fw-550;
+				li {
+					list-style: none;
+				}
+				li:first-child {
+					font-size: $size-13px;
+				}
+				li:last-child {
+					font-size: $size-12px;
+					opacity: 0.5;
+				}
+			}
+			> div.article__values {
+				display: grid;
+				grid-template-columns: repeat(2, 1fr);
+				margin-top: 2rem;
+				> ul {
+					display: flex;
+					flex-direction: column;
+					gap: 0.5rem;
+					li {
+						list-style: none;
+					}
+					li:first-child {
+						font-size: $size-32px;
+						line-height: $size-32px;
+						font-weight: $fw-550;
+						color: $color-1D719D;
+					}
+					li:last-child {
+						font-size: $size-13px;
+						font-weight: $fw-550;
+					}
+				}
+			}
+		}
+	}
+	.article__fog {
+		@include block-fog-border();
+	}
 }
