--- a/styles/layout/privacy-policy/_privacy.scss
+++ b/styles/layout/privacy-policy/_privacy.scss
@@ -24,57 +24,74 @@
 		flex-direction: column;
 		gap: 4rem;
 		margin-top: 4rem;
-	}
-	&__item {
-		counter-increment: item-counter;
-		counter-reset: subitem-counter;
-		padding-left: $size-64px;
-		&-title {
-			@include fs-text(2vw, $size-40px, $size-24px);
-			text-transform: none;
-			font-weight: $fw-660;
-			&::before {
-				content: counter(item-counter) ".";
+
+		// Стили для основных разделов (privacy__item)
+		> div {
+			counter-increment: item-counter;
+			counter-reset: subitem-counter;
+			padding-left: $size-64px;
+			display: flex;
+			flex-direction: column;
+			gap: 1rem;
+
+			// Заголовки разделов (privacy__item-title)
+			> h2 {
+				@include fs-text(2vw, $size-40px, $size-24px);
+				text-transform: none;
+				font-weight: $fw-660;
+				position: relative;
+				&::before {
+					content: counter(item-counter) ".";
+					position: absolute;
+					top: 0;
+					left: -4rem;
+				}
 			}
-		}
-	}
-	&__item,
-	&__subitem,
-	&__sub-subitem {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-		&-title {
-			position: relative;
-			&::before {
-				position: absolute;
-				top: 0;
-				left: -4rem;
-			}
-		}
-	}
-	&__subitem,
-	&__sub-subtem {
-		color: $color-D6D0C6;
-		font-size: $size-14px;
-	}
-	&__subitem {
-		counter-increment: subitem-counter;
-		counter-reset: sub-subitem-counter;
-		margin-top: 2rem;
-		&-title {
-			font-size: $size-24px;
-			&::before {
-				content: counter(item-counter) "." counter(subitem-counter);
-			}
-		}
-	}
-	&__sub-subitem {
-		counter-increment: sub-subitem-counter;
-		&-title {
-			font-size: $size-24px;
-			&::before {
-				content: counter(item-counter) "." counter(subitem-counter) "." counter(sub-subitem-counter);
+
+			// Подразделы (privacy__subitem)
+			> div {
+				counter-increment: subitem-counter;
+				counter-reset: sub-subitem-counter;
+				margin-top: 2rem;
+				color: $color-D6D0C6;
+				font-size: $size-14px;
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+
+				// Заголовки подразделов (privacy__subitem-title)
+				> h3 {
+					font-size: $size-24px;
+					position: relative;
+					&::before {
+						content: counter(item-counter) "." counter(subitem-counter);
+						position: absolute;
+						top: 0;
+						left: -4rem;
+					}
+				}
+
+				// Под-подразделы (privacy__sub-subitem)
+				> div {
+					counter-increment: sub-subitem-counter;
+					color: $color-D6D0C6;
+					font-size: $size-14px;
+					display: flex;
+					flex-direction: column;
+					gap: 1rem;
+
+					// Заголовки под-подразделов (privacy__sub-subitem-title)
+					> h4 {
+						font-size: $size-24px;
+						position: relative;
+						&::before {
+							content: counter(item-counter) "." counter(subitem-counter) "." counter(sub-subitem-counter);
+							position: absolute;
+							top: 0;
+							left: -4rem;
+						}
+					}
+				}
 			}
 		}
 	}
