--- a/styles/layout/service/_service.scss
+++ b/styles/layout/service/_service.scss
@@ -6,37 +6,37 @@
 	&__header {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		&-imagebox {
+		> div.service__titlebox {
+			display: flex;
+			flex-direction: column;
+			gap: $size-48px;
+			h1 {
+				@include fs-text(5vw, $size-64px, $size-32px);
+				text-transform: none;
+			}
+			ul {
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+				font-size: $size-18px;
+				font-weight: $fw-550;
+			}
+		}
+		> div:has(picture) {
 			display: flex;
 			justify-content: flex-end;
 			align-items: center;
+			picture {
+				@include card-effect(25rem, 20rem, 0.5rem, 2rem);
+				@include flex-center();
+				rotate: 3.5deg;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
 		}
-		&-image-wrapper {
-			@include card-effect(25rem, 20rem, 0.5rem, 2rem);
-			@include flex-center();
-			rotate: 3.5deg;
-		}
-		&-image {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
-	&__titlebox {
-		display: flex;
-		flex-direction: column;
-		gap: $size-48px;
-	}
-	&__title {
-		@include fs-text(5vw, $size-64px, $size-32px);
-		text-transform: none;
-	}
-	&__subtitle {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-		font-size: $size-18px;
-		font-weight: $fw-550;
 	}
 	&__body {
 		display: grid;
@@ -44,76 +44,91 @@
 		gap: 2rem;
 		padding: 4rem 0;
 		margin-top: 4rem;
-		&-imagebox {
+		> aside {
 			display: flex;
 			align-items: flex-end;
 			justify-content: center;
+			> picture {
+				@include card-effect(19rem, 25rem, 0.5rem, 2rem);
+				rotate: -3.5deg;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
 		}
-		&-image-wrapper {
-			@include card-effect(19rem, 25rem, 0.5rem, 2rem);
-			rotate: -3.5deg;
+		> div:has(h2) {
+			position: relative;
+			> h2 {
+				@include fs-text(5vw, $size-48px, $size-24px);
+				position: sticky;
+				top: 4rem;
+				text-transform: none;
+				text-align: right;
+				text-wrap: nowrap;
+			}
 		}
-		&-image {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
-	&__desc-container {
-		position: relative;
-	}
-	&__desc {
-		@include fs-text(5vw, $size-48px, $size-24px);
-		position: sticky;
-		top: 4rem;
-		text-transform: none;
-		text-align: right;
-		text-wrap: nowrap;
 	}
 	&__content {
 		display: flex;
 		flex-direction: column;
 		gap: 4rem;
-	}
-	&__list {
-        counter-reset: item-counter;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-		font-size: $size-14px;
-		&-item {
-			opacity: 0.6;
-			&--title {
+		> ul,
+		ol {
+			counter-reset: item-counter;
+			display: flex;
+			flex-direction: column;
+			gap: 0.5rem;
+			font-size: $size-14px;
+			li {
+				opacity: 0.6;
+			}
+		}
+		> ul {
+			li:first-child {
 				font-size: $size-18px;
 				font-weight: $fw-550;
 				margin-bottom: 2rem;
 				opacity: 1;
 			}
-			&--marked {
+			li:not(:first-child) {
 				list-style: disc outside;
 				margin-left: 1rem;
-				&-number {
-                    counter-increment: item-counter;
-                    position: relative;
-                    padding-left: 1rem;
-                    &::before {
-                        content: counter(item-counter) '.';
-                        position: absolute;
-                        left: 0;
-                    }
+			}
+		}
+		> ol {
+			li {
+				list-style: none;
+			}
+			li:first-child {
+				font-size: $size-18px;
+				font-weight: $fw-550;
+				margin-bottom: 2rem;
+				opacity: 1;
+			}
+			li:not(:first-child) {
+				counter-increment: item-counter;
+				position: relative;
+				padding-left: 1rem;
+				&::before {
+					content: counter(item-counter) ".";
+					position: absolute;
+					left: 0;
 				}
 			}
 		}
+		> button {
+			@include button($color-FFFFFF, $color-FFFFFF, none, none, inherit, $color-020109, $color-FFFFFF);
+			width: fit-content;
+			font-weight: $fw-660;
+			display: flex;
+			align-items: center;
+			gap: 0.5rem;
+			> i {
+				position: static;
+				rotate: 45deg;
+			}
+		}
 	}
-    &__button {
-        @include button($color-FFFFFF, $color-FFFFFF, none, none, inherit, $color-020109, $color-FFFFFF);
-        font-weight: $fw-660;
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        &--icon {
-            position: static;
-            rotate: 45deg;
-        }
-    }
 }
