--- a/styles/components/modals/_modal-form.scss
+++ b/styles/components/modals/_modal-form.scss
@@ -12,23 +12,24 @@
 	color: inherit;
 	translate: 100% 0;
 	transition: $duration;
-    will-change: translate;
+	will-change: translate;
 	&::backdrop {
 		background-color: rgba($color-020109, 0.5);
 		opacity: 0;
 		transition: $duration;
 	}
-    &.open {
-        translate: 0 0;
-        pointer-events: auto;
-        &::backdrop {
-            opacity: 1;
-        }
-    }
-    &.closing {
-        translate: 100% 0;
-        pointer-events: none;
-    }
+	&.open {
+		translate: 0 0;
+		pointer-events: auto;
+		&::backdrop {
+			backdrop-filter: blur(5px);
+			opacity: 1;
+		}
+	}
+	&.closing {
+		translate: 100% 0;
+		pointer-events: none;
+	}
 	&__container {
 		display: flex;
 		flex-direction: column;
@@ -81,12 +82,87 @@
 			height: $size-128px;
 		}
 	}
-	&__footnote {
-		text-wrap: wrap;
-		font-size: $size-12px;
-		line-height: $size-16px;
-		opacity: 0.25;
+	&__footer {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
+	&__agreement {
+		display: flex;
+		align-items: center;
+		gap: 0.5rem;
+		&-checkbox {
+			cursor: pointer;
+			position: relative;
+			width: 1.125rem;
+			height: 1.125rem;
+			aspect-ratio: 1/1;
+			border: $size-1-25px solid $color-FFFFFF;
+			> input[type="checkbox"] {
+				cursor: pointer;
+				position: absolute;
+				z-index: 1;
+				inset: 0;
+				width: 100%;
+				height: 100%;
+				appearance: none;
+				-moz-appearance: none;
+				-webkit-appearance: none;
+			}
+			&::before,
+			&::after {
+				content: "";
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				translate: -50% -50%;
+				width: 0.75rem;
+				height: $size-1-5px;
+				opacity: 0;
+				transition: all calc($duration / 2);
+				pointer-events: none;
+			}
+			@media (pointer: fine) {
+				&:hover {
+					&::before,
+					&::after {
+						background-color: $color-FFFFFF;
+						opacity: 1;
+					}
+					&::before {
+						rotate: 90deg;
+					}
+				}
+			}
+			&:has(input:checked) {
+				border-color: $color-FFFFFF;
+				background-color: $color-FFFFFF;
+				&::before,
+				&::after {
+					background-color: $color-020109;
+					opacity: 1;
+				}
+				&::before {
+					left: 60%;
+					width: 0.5rem;
+					rotate: 135deg;
+				}
+				&::after {
+					left: 30%;
+					top: 60%;
+					width: 0.35rem;
+					rotate: -135deg;
+				}
+			}
+		}
+		&-label {
+			text-wrap: wrap;
+			font-size: $size-12px;
+			line-height: $size-16px;
+			opacity: 0.25;
+		}
 		&-link {
+			width: 100%;
 			text-decoration: underline;
 		}
 	}
@@ -103,13 +179,13 @@
 	}
 }
 @media (max-width: 475px) {
-    .modal-form {
+	.modal-form {
 		&__container {
 			padding-bottom: 6rem;
 		}
-        &__title {
-            font-size: 2rem;
-            line-height: 2rem;
-        }
-    }
+		&__title {
+			font-size: 2rem;
+			line-height: 2rem;
+		}
+	}
 }
