--- a/styles/css/service-page.css
+++ b/styles/css/service-page.css
@@ -345,6 +345,7 @@ body {
   pointer-events: auto;
 }
 .modal-form.open::backdrop {
+  backdrop-filter: blur(5px);
   opacity: 1;
 }
 .modal-form.closing {
@@ -403,13 +404,83 @@ body {
   resize: none;
   height: 8rem;
 }
-.modal-form__footnote {
+.modal-form__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.modal-form__agreement {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.modal-form__agreement-checkbox {
+  cursor: pointer;
+  position: relative;
+  width: 1.125rem;
+  height: 1.125rem;
+  aspect-ratio: 1/1;
+  border: 0.078125rem solid #FFFFFF;
+}
+.modal-form__agreement-checkbox > input[type=checkbox] {
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+.modal-form__agreement-checkbox::before, .modal-form__agreement-checkbox::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 0.75rem;
+  height: 0.09375rem;
+  opacity: 0;
+  transition: all 0.35s;
+  pointer-events: none;
+}
+@media (pointer: fine) {
+  .modal-form__agreement-checkbox:hover::before, .modal-form__agreement-checkbox:hover::after {
+    background-color: #FFFFFF;
+    opacity: 1;
+  }
+  .modal-form__agreement-checkbox:hover::before {
+    rotate: 90deg;
+  }
+}
+.modal-form__agreement-checkbox:has(input:checked) {
+  border-color: #FFFFFF;
+  background-color: #FFFFFF;
+}
+.modal-form__agreement-checkbox:has(input:checked)::before, .modal-form__agreement-checkbox:has(input:checked)::after {
+  background-color: #020109;
+  opacity: 1;
+}
+.modal-form__agreement-checkbox:has(input:checked)::before {
+  left: 60%;
+  width: 0.5rem;
+  rotate: 135deg;
+}
+.modal-form__agreement-checkbox:has(input:checked)::after {
+  left: 30%;
+  top: 60%;
+  width: 0.35rem;
+  rotate: -135deg;
+}
+.modal-form__agreement-label {
   text-wrap: wrap;
   font-size: 0.75rem;
   line-height: 1rem;
   opacity: 0.25;
 }
-.modal-form__footnote-link {
+.modal-form__agreement-link {
+  width: 100%;
   text-decoration: underline;
 }
 .modal-form__button {
@@ -1215,12 +1286,83 @@ body {
 .connection__input-wrapper--custom {
   grid-column: span 3;
 }
-.connection__footnote {
+.connection__agreement-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.connection__agreement {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.connection__agreement-checkbox {
+  cursor: pointer;
+  position: relative;
+  width: 1.125rem;
+  height: 1.125rem;
+  aspect-ratio: 1/1;
+  border: 0.078125rem solid #FFFFFF;
+}
+.connection__agreement-checkbox > input[type=checkbox] {
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+.connection__agreement-checkbox::before, .connection__agreement-checkbox::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 0.75rem;
+  height: 0.09375rem;
+  opacity: 0;
+  transition: all 0.35s;
+  pointer-events: none;
+}
+@media (pointer: fine) {
+  .connection__agreement-checkbox:hover::before, .connection__agreement-checkbox:hover::after {
+    background-color: #FFFFFF;
+    opacity: 1;
+  }
+  .connection__agreement-checkbox:hover::before {
+    rotate: 90deg;
+  }
+}
+.connection__agreement-checkbox:has(input:checked) {
+  border-color: #FFFFFF;
+  background-color: #FFFFFF;
+}
+.connection__agreement-checkbox:has(input:checked)::before, .connection__agreement-checkbox:has(input:checked)::after {
+  background-color: #020109;
+  opacity: 1;
+}
+.connection__agreement-checkbox:has(input:checked)::before {
+  left: 60%;
+  width: 0.5rem;
+  rotate: 135deg;
+}
+.connection__agreement-checkbox:has(input:checked)::after {
+  left: 30%;
+  top: 60%;
+  width: 0.35rem;
+  rotate: -135deg;
+}
+.connection__agreement-label {
+  text-wrap: wrap;
   font-size: 0.75rem;
-  line-height: 0.75rem;
+  line-height: 1rem;
   opacity: 0.25;
 }
-.connection__footnote-link {
+.connection__agreement-link {
+  width: 100%;
   text-decoration: underline;
 }
 .connection__button {
