--- a/styles/layout/about/_docs.scss
+++ b/styles/layout/about/_docs.scss
@@ -24,6 +24,7 @@
             }
         }
         &-wrapper {
+            width: 100%;
             height: 100%;
             display: grid;
             grid-template-rows: 35% 35% auto;
@@ -65,7 +66,7 @@
         font-size: $size-12px;
         transition: $duration;
         &--prev {
-            rotate: -130deg;
+            rotate: -135deg;
         }
         &--next {
             rotate: 45deg;
