--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -1,6 +1,7 @@
 @import "../utils/variables";
 @import "../utils/mixins";
 @import "../utils/leaflet";
+@import "../utils/fancybox";
 
 @import "../base/reset";
 @import "../base/typography";
